environments/testing/prd/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: app-podinfo-prd-podinfo
  namespace: app-podinfo-prd
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app-podinfo-prd-podinfo
            port:
              number: 9898
        path: /prd/podinfo/?(.*)
        pathType: Prefix
      - backend:
          service:
            name: app-podinfo-prd-podinfo
            port:
              number: 9898
        path: /prd/(api/?.*)
        pathType: Prefix
